# tric

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
bridges/c/tests/: bridge_test.c
bridges/cpp/: tric.hpp
bridges/cpp/tests/: bridge_test.cpp
bridges/nim/: tric.nimble
bridges/nim/src/: tric.nim
bridges/nim/tests/: bridge_test.nim
bridges/swift/: Package.swift
bridges/swift/Sources/CTric/: tric.c
bridges/swift/Sources/CTric/include/: tric.h
bridges/swift/Sources/Tric/: Connection.swift  Errors.swift
bridges/swift/Tests/TricTests/: BridgeTest.swift
bridges/tcl/: .clang-format  build.sh  pkgIndex.tcl  tric_tcl.c
bridges/tcl/tests/: bridge_test.tcl
bridges/zig/: build.zig  build.zig.zon
bridges/zig/src/: root.zig
bridges/zig/tests/: bridge_test.zig
release/benchmark/: benchmark-history.csv
release/manual/clients/: 00-overview.md
release/manual/clients/c/: 01-quickstart.md
release/manual/clients/cpp/: 01-quickstart.md
release/manual/clients/lua/: 01-quickstart.md
release/manual/clients/nim/: 01-quickstart.md
release/manual/clients/swift/: 01-quickstart.md
release/manual/clients/tcl/: 01-quickstart.md
release/manual/clients/zig/: 01-quickstart.md
release/manual/server/: 01-installation.md  02-configuration.md  03-cli-reference.md  04-wire-protocol.md  05-storage-model.md  06-sql-interface.md  07-import-export.md  08-instance-management.md  09-authentication.md  10-performance.md
src/: lib.rs  main.rs  store.rs
src/core/: data_bus.rs  mod.rs  permutive_bus.rs  sqlite_bus.rs
src/modules/: analyser.rs  auth.rs  benchmark.rs  cli.rs  codec.rs  export.rs  health.rs  import.rs  logger.rs  metrics.rs  mod.rs  query.rs  router.rs  server.rs
tests/: benchmark_test.rs  expiry_test.rs  server_integration_test.rs  write_value_with_ttl_test.rs
